# dunenpc

./: .gitignore  CMakeLists.txt  README.md  setup_custom_install_path.sh
.github/workflows/: backend-client-functional-tests.yml
examples/: CMakeLists.txt  cli_dunenpc.cpp  for_slide.cpp  standalone.cpp
include/: dunenpc.hpp
include/dunenpc/: cli.hpp  dunenpc.hpp
src/: CMakeLists.txt  cli.cpp  dunenpc.cpp
tests/: CMakeLists.txt  test_dunenpc.cpp
